LAU-1122 improve feign retry logic